--- a/index.html
+++ b/index.html
@@ -8,12 +8,52 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+	<div class="container">
+
+		<div class="row ">
+			<div class="col-xs-6 col-sm-2 col-md-2">
+			</div>
+
+	   </div>
+
+		<div class="row">
+			<div class="col-xs-12 col-sm-12 col-md-3 ">
+			</div>
+
+			<div class="col-xs-12 col-sm-12 col-md-5">
+			</div>
+
+			<div class="col-xs-12 col-sm-12 col-md-4">
+			</div>
+
+
+		</div>
+
+		<div class="row">
+			<div class="col-xs-12 col-sm-8 col-md-8">
+			</div>
+
+			<div class="col-xs-12 col-sm-4 col-md-4">
+			</div>
+
+
+		</div>
+
+		<div class="row">
+			<div class="col-xs-12 col-sm-12 col-md-12">
+			</div>
+
+	</div>
+
+		<div class="row">
+			<div class="col-xs-12 col-sm-6 col-md-4">
+			</div>
+
+		</div>
 
 
 
-
-
-
+	</div>
 
 
 
