--- a/index.html
+++ b/index.html
@@ -8,22 +8,40 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<div class="container">
+	<div class="container-fluid">
 
 		<div class="row ">
 			<div class="col-xs-6 col-sm-2 col-md-2">
+				<h2>Home</h2>
 			</div>
 
 	   </div>
 
 		<div class="row">
 			<div class="col-xs-12 col-sm-12 col-md-3 ">
+				<div>YouTube</div>
+				<div>Broadcast Yourself!</div>
 			</div>
 
 			<div class="col-xs-12 col-sm-12 col-md-5">
+				<div>
+					<input class="col-xs-12 col-sm-9 col-md-9" type="text"></input>
+					<button class="col-xs-12 col-sm-3 col-md-3" value"search">Search</button>
+				</div>
+				<div>
+					<div class="col-xs-12 col-sm-3 col-md-3">Home</div>
+					<div class="col-xs-12 col-sm-3 col-md-3">Videos</div>
+					<div class="col-xs-12 col-sm-3 col-md-3">Channels</div>
+				</div>
 			</div>
 
 			<div class="col-xs-12 col-sm-12 col-md-4">
+				<div><a href="#">Create Account</a> or <a href="#">Sign-in</a></div>
+				<div>
+					<div class="col-xs-12 col-sm-6 col-md-6">Subscription</div>
+					<div class="col-xs-12 col-sm-3 col-md-3">History</div>
+					<div class="col-xs-12 col-sm-3 col-md-3">Upload</div>
+				</div>
 			</div>
 
 
