--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
 	<div class="container-fluid">
 
-		<div class="row ">
+		<div class="row first">
 			<div class="col-xs-6 col-sm-2 col-md-2">
 				<h2>Home</h2>
 			</div>
 
 	   </div>
 
-		<div class="row">
+		<div class="row second">
 			<div class="col-xs-12 col-sm-12 col-md-3 ">
 				<div>YouTube</div>
 				<div>Broadcast Yourself!</div>
@@ -29,9 +29,9 @@
 					<button class="col-xs-12 col-sm-3 col-md-3" value"search">Search</button>
 				</div>
 				<div>
-					<div class="col-xs-12 col-sm-3 col-md-3">Home</div>
-					<div class="col-xs-12 col-sm-3 col-md-3">Videos</div>
-					<div class="col-xs-12 col-sm-3 col-md-3">Channels</div>
+					<div class="col-xs-12 col-sm-3 col-md-4">Home</div>
+					<div class="col-xs-12 col-sm-3 col-md-4">Videos</div>
+					<div class="col-xs-12 col-sm-3 col-md-4">Channels</div>
 				</div>
 			</div>
 
@@ -47,23 +47,52 @@
 
 		</div>
 
-		<div class="row">
+		<div class="row third">
 			<div class="col-xs-12 col-sm-8 col-md-8">
+
+				<div class="col-xs-12 col-sm-12 col-md-12">
+				Featured
+				</div>
+
+				<div class="col-xs-12 col-sm-7 col-md-7">
+					<img src="http://placehold.it/400x400">
+				</div>
+
+				<div class="col-xs-12 col-sm-5 col-md-5">
+					<div>
+						<div class="minipic col-xs-4 col-sm-4 col-md-4">
+						</div>
+						<div class="miniDescription col-xs-8 col-sm-8 col-md-8">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</div>
+					</div>
+					<div>
+						<div class="minipic col-xs-4 col-sm-4 col-md-4">
+						</div>
+						<div class="miniDescription col-xs-8 col-sm-8 col-md-8">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</div>
+					</div>
+					<div>
+						<div class="minipic col-xs-4 col-sm-4 col-md-4">
+						</div>
+						<div class="miniDescription col-xs-8 col-sm-8 col-md-8">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</div>
+					</div>
+				</div>
 			</div>
 
 			<div class="col-xs-12 col-sm-4 col-md-4">
+				<div class="col-xs-12 col-sm-12 col-md-12">
+				</div>
+				<div class="col-xs-12 col-sm-12 col-md-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</div>
 			</div>
 
 
 		</div>
 
-		<div class="row">
+		<div class="row fourth">
 			<div class="col-xs-12 col-sm-12 col-md-12">
 			</div>
 
 	</div>
 
-		<div class="row">
+		<div class="row fifth">
 			<div class="col-xs-12 col-sm-6 col-md-4">
 			</div>
 
