1st page init commit

--- a/index.html
+++ b/index.html
@@ -60,22 +60,22 @@
 
 				<div class="col-xs-12 col-sm-5 col-md-5">
 					<div>
-						<div class="minipic col-xs-4 col-sm-4 col-md-4">
+						<div class="minipic col-xs-5 col-sm-5 col-md-5">
 						<img src="http://placehold.it/400x400">
 						</div>
-						<div class="miniDescription col-xs-8 col-sm-8 col-md-8">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
+						<div class="miniDescription col-xs-7 col-sm-7 col-md-7">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
 					</div>
 					<div>
-						<div class="minipic col-xs-4 col-sm-4 col-md-4">
+						<div class="minipic col-xs-5 col-sm-5 col-md-5">
 						<img src="http://placehold.it/400x400">
 						</div>
-						<div class="miniDescription col-xs-8 col-sm-8 col-md-8">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
+						<div class="miniDescription col-xs-7 col-sm-7 col-md-7">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
 					</div>
 					<div>
-						<div class="minipic col-xs-4 col-sm-4 col-md-4">
+						<div class="minipic col-xs-5 col-sm-5 col-md-5">
 						<img src="http://placehold.it/400x400">
 						</div>
-						<div class="miniDescription col-xs-8 col-sm-8 col-md-8">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
+						<div class="miniDescription col-xs-7 col-sm-7 col-md-7">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
 					</div>
 				</div>
 			</div>
@@ -91,14 +91,47 @@
 		</div>
 
 		<div class="row fourth">
-			<div class="col-xs-12 col-sm-12 col-md-12">
+			<div class=" footer-wrapper col-xs-12 col-sm-12 col-md-12">
+				<div class="col-xs-12 col-sm-12 col-md-12">More Videos</div>
+				<div class="thumb-wrapper col-xs-12 col-sm-12 col-md-12">
+					<div class="col-xs-6 col-sm-3 col-md-3">
+						<div class="footer-pic col-xs-6 col-sm-6 col-md-6"><img src="http://placehold.it/400x400"></div>
+						<div class="footer-disc col-xs-6 col-sm-6 col-md-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+					</div>
+					<div class="col-xs-6 col-sm-3 col-md-3">
+						<div class="footer-pic col-xs-6 col-sm-6 col-md-6"><img src="http://placehold.it/400x400"></div>
+						<div class="footer-disc col-xs-6 col-sm-6 col-md-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+					</div>
+					<div class="col-xs-6 col-sm-3 col-md-3">
+						<div class="footer-pic col-xs-6 col-sm-6 col-md-6"><img src="http://placehold.it/400x400"></div>
+						<div class="footer-disc col-xs-6 col-sm-6 col-md-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+					</div>
+					<div class="col-xs-6 col-sm-3 col-md-3">
+						<div class="footer-pic col-xs-6 col-sm-6 col-md-6"><img src="http://placehold.it/400x400"></div>
+						<div class="footer-disc col-xs-6 col-sm-6 col-md-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+					</div>
+					<div class="col-xs-6 col-sm-3 col-md-3">
+						<div class="footer-pic col-xs-6 col-sm-6 col-md-6"><img src="http://placehold.it/400x400"></div>
+						<div class="footer-disc col-xs-6 col-sm-6 col-md-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+					</div>
+					<div class="col-xs-6 col-sm-3 col-md-3">
+						<div class="footer-pic col-xs-6 col-sm-6 col-md-6"><img src="http://placehold.it/400x400"></div>
+						<div class="footer-disc col-xs-6 col-sm-6 col-md-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+					</div>
+					<div class="col-xs-6 col-sm-3 col-md-3">
+						<div class="footer-pic col-xs-6 col-sm-6 col-md-6"><img src="http://placehold.it/400x400"></div>
+						<div class="footer-disc col-xs-6 col-sm-6 col-md-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+					</div>
+					<div class="col-xs-6 col-sm-3 col-md-3">
+						<div class="footer-pic col-xs-6 col-sm-6 col-md-6"><img src="http://placehold.it/400x400"></div>
+						<div class="footer-disc col-xs-6 col-sm-6 col-md-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+					</div>	
+				</div>
 			</div>
-
-	</div>
+		</div>
 
 		<div class="row fifth">
-			<div class="col-xs-12 col-sm-6 col-md-4">
-			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4">YouTube is a Trademark of YouTube.com</div>
 
 		</div>
 
