Second Page Final Layout

--- a/index II.html
+++ b/index II.html
@@ -68,7 +68,41 @@
 					<div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
 				</div>
 			</div>
-			<div class="col-xs-12 col-sm-4 col-md-4"></div>
+			<div class="col-xs-12 col-sm-4 col-md-4">
+				<div>
+					<div class="row one">
+						<div class="col-xs-2 col-sm-2 col-md-2"><img src="http://placehold.it/200x200"></div>
+						<div class="col-xs-7 col-sm-7 col-md-7"><h4>Profile</h4><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et ,</p></div>
+						<div class="col-xs-3 col-sm-3 col-md-3"><button>Subscribe</button></div>
+					</div>
+					<div class="row two">
+						<div class="col-xs-12 col-sm-12 col-md-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+					</div>
+				</div>
+				<div>
+					<div>Related Videos</div>
+					<div class="related-videos">
+						<div class="col-xs-3 col-sm-3 col-md-3"><img src="http://placehold.it/200x200"></div>
+						<div class="col-xs-9 col-sm-9 col-md-9"><a href="#">Related Video...</a></div>
+						<div class="col-xs-9 col-sm-9 col-md-9">727 views</div>
+					</div>
+					<div class="related-videos">
+						<div class="col-xs-3 col-sm-3 col-md-3"><img src="http://placehold.it/200x200"></div>
+						<div class="col-xs-9 col-sm-9 col-md-9"><a href="#">Related Video...</a></div>
+						<div class="col-xs-9 col-sm-9 col-md-9">727 views</div>
+					</div>
+					<div class="related-videos">
+						<div class="col-xs-3 col-sm-3 col-md-3"><img src="http://placehold.it/200x200"></div>
+						<div class="col-xs-9 col-sm-9 col-md-9"><a href="#">Related Video...</a></div>
+						<div class="col-xs-9 col-sm-9 col-md-9">727 views</div>
+					</div>
+					<div class="related-videos">
+						<div class="col-xs-3 col-sm-3 col-md-3"><img src="http://placehold.it/200x200"></div>
+						<div class="col-xs-9 col-sm-9 col-md-9"><a href="#">Related Video...</a></div>
+						<div class="col-xs-9 col-sm-9 col-md-9">727 views</div>
+					</div>
+				</div>
+			</div>
 
 		</div>
 
