--- a/index II.html
+++ b/index II.html
@@ -12,8 +12,8 @@
 
 	<div class="container-fluid">
 		<div class="row first">
-			<div class="col-xs-6 col-sm-2 col-md-2">
-				<h2>Home</h2>
+			<div class="video-wrapper col-xs-6 col-sm-2 col-md-2">
+				<h2>Videos</h2>
 			</div>
 
 	   </div>
