--- a/index II.html
+++ b/index II.html
@@ -11,17 +11,17 @@
 
 
 	<div class="container-fluid">
-		<div class="row first">
-			<div class="video-wrapper col-xs-6 col-sm-2 col-md-2">
-				<h2>Videos</h2>
+		<div class="row first video-wrapper">
+			<div class="col-xs-12 col-sm-12 col-md-12">
+				<h3>Videos</h3>
 			</div>
 
 	   </div>
 
-		<div class="row second">
-			<div class="col-xs-12 col-sm-12 col-md-3 ">
-				<div>YouTube</div>
-				<div>Broadcast Yourself!</div>
+		<div class="row second header-wrapper">
+			<div class="col-xs-12 col-sm-12 col-md-3 youtube-wrapper">
+				<div class="title"><h2>You<span class"red">Tube</span></h2></div>
+				<div class="broadcast">Broadcast Yourself!</div>
 			</div>
 
 			<div class="col-xs-12 col-sm-12 col-md-5">
