--- a/index.html
+++ b/index.html
@@ -48,43 +48,43 @@
 		</div>
 
 		<div class="row third">
-			<div class="col-xs-12 col-sm-8 col-md-8">
+			<div class="col-xs-12 col-sm-8 col-md-8 vidback">
 
 				<div class="col-xs-12 col-sm-12 col-md-12">
-				Featured
+				<h4>Featured</h4>
 				</div>
 
 				<div class="col-xs-12 col-sm-7 col-md-7">
-					<img src="http://placehold.it/400x400">
+					<img id="mainImage" src="http://placehold.it/400x330">
 				</div>
 
 				<div class="col-xs-12 col-sm-5 col-md-5">
 					<div>
-						<div class="minipic col-xs-5 col-sm-5 col-md-5">
+						<div class="minipic one col-xs-5 col-sm-5 col-md-5" >
 						<img src="http://placehold.it/400x400">
 						</div>
-						<div class="miniDescription col-xs-7 col-sm-7 col-md-7">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
+						<div class="miniDescription one col-xs-7 col-sm-7 col-md-7 main-vid-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  </div>
 					</div>
 					<div>
-						<div class="minipic col-xs-5 col-sm-5 col-md-5">
+						<div class="minipic two col-xs-5 col-sm-5 col-md-5">
 						<img src="http://placehold.it/400x400">
 						</div>
-						<div class="miniDescription col-xs-7 col-sm-7 col-md-7">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
+						<div class="miniDescription two col-xs-7 col-sm-7 col-md-7 main-vid-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </div>
 					</div>
 					<div>
-						<div class="minipic col-xs-5 col-sm-5 col-md-5">
+						<div class="minipic three col-xs-5 col-sm-5 col-md-5">
 						<img src="http://placehold.it/400x400">
 						</div>
-						<div class="miniDescription col-xs-7 col-sm-7 col-md-7">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
+						<div class="miniDescription three col-xs-7 col-sm-7 col-md-7 main-vid-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  </div>
 					</div>
 				</div>
 			</div>
 
 			<div class="col-xs-12 col-sm-4 col-md-4">
 				<div class="col-xs-12 col-sm-12 col-md-12">
-				<img src="http://placehold.it/400x400">
+				<img src="http://placehold.it/330x330">
 				</div>
-				<div class="col-xs-12 col-sm-12 col-md-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</div>
+				<div class=" mediDescription col-xs-12 col-sm-12 col-md-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
 			</div>
 
 
@@ -92,50 +92,50 @@
 
 		<div class="row fourth">
 			<div class=" footer-wrapper col-xs-12 col-sm-12 col-md-12">
-				<div class="col-xs-12 col-sm-12 col-md-12">More Videos</div>
+				<div class=" more col-xs-12 col-sm-12 col-md-12"><h3>More Videos</h3></div>
 				<div class="thumb-wrapper col-xs-12 col-sm-12 col-md-12">
 					<div class="col-xs-6 col-sm-3 col-md-3">
 						<div class="footer-pic col-xs-6 col-sm-6 col-md-6"><img src="http://placehold.it/400x400"></div>
-						<div class="footer-disc col-xs-6 col-sm-6 col-md-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+						<div class="footer-disc one col-xs-6 col-sm-6 col-md-6"> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ea commodo consequat.</div>
 					</div>
 					<div class="col-xs-6 col-sm-3 col-md-3">
 						<div class="footer-pic col-xs-6 col-sm-6 col-md-6"><img src="http://placehold.it/400x400"></div>
-						<div class="footer-disc col-xs-6 col-sm-6 col-md-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+						<div class="footer-disc two col-xs-6 col-sm-6 col-md-6"> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex commodo consequat.</div>
 					</div>
 					<div class="col-xs-6 col-sm-3 col-md-3">
 						<div class="footer-pic col-xs-6 col-sm-6 col-md-6"><img src="http://placehold.it/400x400"></div>
-						<div class="footer-disc col-xs-6 col-sm-6 col-md-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+						<div class="footer-disc three col-xs-6 col-sm-6 col-md-6"> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex commodo consequat.</div>
 					</div>
 					<div class="col-xs-6 col-sm-3 col-md-3">
 						<div class="footer-pic col-xs-6 col-sm-6 col-md-6"><img src="http://placehold.it/400x400"></div>
-						<div class="footer-disc col-xs-6 col-sm-6 col-md-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+						<div class="footer-disc four col-xs-6 col-sm-6 col-md-6"> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex commodo consequat.</div>
 					</div>
 					<div class="col-xs-6 col-sm-3 col-md-3">
 						<div class="footer-pic col-xs-6 col-sm-6 col-md-6"><img src="http://placehold.it/400x400"></div>
-						<div class="footer-disc col-xs-6 col-sm-6 col-md-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+						<div class="footer-disc five col-xs-6 col-sm-6 col-md-6"> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex commodo consequat.</div>
 					</div>
 					<div class="col-xs-6 col-sm-3 col-md-3">
 						<div class="footer-pic col-xs-6 col-sm-6 col-md-6"><img src="http://placehold.it/400x400"></div>
-						<div class="footer-disc col-xs-6 col-sm-6 col-md-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+						<div class="footer-disc six col-xs-6 col-sm-6 col-md-6"> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ea commodo consequat.</div>
 					</div>
 					<div class="col-xs-6 col-sm-3 col-md-3">
 						<div class="footer-pic col-xs-6 col-sm-6 col-md-6"><img src="http://placehold.it/400x400"></div>
-						<div class="footer-disc col-xs-6 col-sm-6 col-md-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+						<div class="footer-disc seven col-xs-6 col-sm-6 col-md-6"> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex commodo consequat.</div>
 					</div>
 					<div class="col-xs-6 col-sm-3 col-md-3">
 						<div class="footer-pic col-xs-6 col-sm-6 col-md-6"><img src="http://placehold.it/400x400"></div>
-						<div class="footer-disc col-xs-6 col-sm-6 col-md-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+						<div class="footer-disc eight col-xs-6 col-sm-6 col-md-6"> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex commodo consequat.</div>
 					</div>	
 				</div>
 			</div>
 		</div>
 
 		<div class="row fifth">
-			<div class="col-xs-12 col-sm-6 col-md-4">YouTube is a Trademark of YouTube.com</div>
+			<div class=" trade col-xs-12 col-sm-6 col-md-4">YouTube is a Trademark of YouTube.com</div>
 
 		</div>
 
-
+		
 
 	</div>
 
