--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 			<div class="col-xs-12 col-sm-12 col-md-5">
 				<div>
-					<input class="col-xs-12 col-sm-9 col-md-9" type="text"></input>
+					<input class="col-xs-12 col-sm-9 col-md-9" type="text"/>
 					<button class="col-xs-12 col-sm-3 col-md-3" value"search">Search</button>
 				</div>
 				<div>
@@ -82,7 +82,9 @@
 
 			<div class="col-xs-12 col-sm-4 col-md-4">
 				<div class="col-xs-12 col-sm-12 col-md-12">
-				<img src="http://placehold.it/330x330">
+				<a href="#" data-toggle="modal" data-target="#rob">
+					<img id="theimg"src="images/rob-before-dc.png">
+				</a>
 				</div>
 				<div class=" mediDescription col-xs-12 col-sm-12 col-md-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
 			</div>
@@ -135,7 +137,16 @@
 
 		</div>
 
-		
+	<!-- Large modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".modal-content">Large modal</button>
+
+<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      	<img class="rob" src="images/rob-before-dc.png"/>
+    </div>
+  </div>
+</div>
 
 	</div>
 
