added pics and video link to index II.html
added pics and video link for iFrame to the index II.html file

--- a/index II.html
+++ b/index II.html
@@ -17,96 +17,85 @@
 			</div>
 
 	   </div>
-
 		<div class="row second header-wrapper">
 			<div class="col-xs-12 col-sm-12 col-md-3 youtube-wrapper">
 				<div class="title"><h2>You<span class"red">Tube</span></h2></div>
 				<div class="broadcast">Broadcast Yourself!</div>
 			</div>
-
-			<div class="col-xs-12 col-sm-12 col-md-5">
+			<div class="search-bar-wrapper col-xs-12 col-sm-12 col-md-5">
 				<div>
 					<input class="col-xs-12 col-sm-9 col-md-9" type="text"></input>
 					<button class="col-xs-12 col-sm-3 col-md-3" value"search">Search</button>
 				</div>
-				<div>
-					<div class="col-xs-12 col-sm-3 col-md-4">Home</div>
-					<div class="col-xs-12 col-sm-3 col-md-4">Videos</div>
-					<div class="col-xs-12 col-sm-3 col-md-4">Channels</div>
+				<div class="search-footer">
+					<div class="home col-xs-12 col-sm-3 col-md-3">Home</div>
+					<div class="videos col-xs-12 col-sm-3 col-md-3">Videos</div>
+					<div class="channels col-xs-12 col-sm-3 col-md-3">Channels</div>
 				</div>
 			</div>
-
-			<div class="col-xs-12 col-sm-12 col-md-4">
-				<div><a href="#">Create Account</a> or <a href="#">Sign-in</a></div>
-				<div>
-					<div class="col-xs-12 col-sm-6 col-md-6">Subscription</div>
+			<div class="sign-in-wrapper col-xs-12 col-sm-12 col-md-4">
+				<div class="create-signin"><a href="#">Create Account</a> or <a href="#">Sign-in</a></div>
+				<div class="subscriptions">
+					<div class="col-xs-12 col-sm-6 col-md-5 col-md-offset-1">Subscription</div>
 					<div class="col-xs-12 col-sm-3 col-md-3">History</div>
 					<div class="col-xs-12 col-sm-3 col-md-3">Upload</div>
 				</div>
 			</div>
-
-
 		</div>
-
 		<div class="row third">
-
-			<div class="col-xs-12 col-sm-12 col-md-12">Video Title</div>
-
+			<div class="video-title col-xs-12 col-sm-12 col-md-12">Video Title</div>
 			<div class="col-xs-12 col-sm-8 col-md-8">
-				<div class="col-xs-12 col-sm-12 col-md-12"><img src="http://placehold.it/350x150"></div>
+				<div class="col-xs-12 col-sm-12 col-md-12"><iframe src="https://www.youtube.com/embed/OQSNhk5ICTI" frameborder="1" allowfullscreen></iframe></div>
 				<div class="col-xs-12 col-sm-12 col-md-12">
-					<div class="col-xs-3 col-sm-3 col-md-2">Share</div>
-					<div class="col-xs-3 col-sm-3 col-md-2">Favorite</div>
-					<div class="col-xs-3 col-sm-3 col-md-2">Flag</div>
-					<div class="col-xs-3 col-sm-3 col-md-2 col-md-offset-2">232,222 Views</div>
+					<div class="col-xs-3 col-sm-3 col-md-2"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Share</div>
+					<div class="col-xs-3 col-sm-3 col-md-2"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span> Favorite</div>
+					<div class="col-xs-3 col-sm-3 col-md-2"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span> Flag</div>
+					<div class="col-xs-3 col-sm-3 col-md-2 col-md-offset-4">232,222 Views</div>
 				</div>
 				<div class="col-xs-12 col-sm-12 col-md-12">
-					<div>Comments</div>
-					<div>User 1</div>
-					<div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
-					<div>User 2</div>
-					<div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+					<div class="comments-title"><h5>Comments</h5></div>
+					<div><a href="#">User 1</a></div>
+					<div class="comments">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
+					<div><a href="#">User 2</a></div>
+					<div class="comments">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-4 col-md-4">
-				<div>
+				<div class="profile-box">
 					<div class="row one">
-						<div class="col-xs-2 col-sm-2 col-md-2"><img src="http://placehold.it/200x200"></div>
-						<div class="col-xs-7 col-sm-7 col-md-7"><h4>Profile</h4><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et ,</p></div>
+						<div class="col-xs-2 col-sm-2 col-md-2"><img src="photo.jpg"></div>
+						<div class="col-xs-7 col-sm-7 col-md-7"><h4>Profile</h4><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et.</p></div>
 						<div class="col-xs-3 col-sm-3 col-md-3"><button>Subscribe</button></div>
 					</div>
 					<div class="row two">
-						<div class="col-xs-12 col-sm-12 col-md-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+						<div class="profile-disc col-xs-12 col-sm-12 col-md-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
 					</div>
 				</div>
 				<div>
-					<div>Related Videos</div>
+					<div><h4>Related Videos</h4></div>
 					<div class="related-videos">
-						<div class="col-xs-3 col-sm-3 col-md-3"><img src="http://placehold.it/200x200"></div>
-						<div class="col-xs-9 col-sm-9 col-md-9"><a href="#">Related Video...</a></div>
+						<div class="col-xs-3 col-sm-3 col-md-3"><img src="https://i.ytimg.com/vi/TP8RB7UZHKI/default.jpg"></div>
+						<div class="related-links col-xs-9 col-sm-9 col-md-9"><a href="#">Related Video...</a></div>
 						<div class="col-xs-9 col-sm-9 col-md-9">727 views</div>
 					</div>
 					<div class="related-videos">
-						<div class="col-xs-3 col-sm-3 col-md-3"><img src="http://placehold.it/200x200"></div>
-						<div class="col-xs-9 col-sm-9 col-md-9"><a href="#">Related Video...</a></div>
+						<div class="col-xs-3 col-sm-3 col-md-3"><img src="https://i.ytimg.com/vi/oHg5SJYRHA0/default.jpg"></div>
+						<div class="related-links col-xs-9 col-sm-9 col-md-9"><a href="#">Related Video...</a></div>
 						<div class="col-xs-9 col-sm-9 col-md-9">727 views</div>
 					</div>
 					<div class="related-videos">
-						<div class="col-xs-3 col-sm-3 col-md-3"><img src="http://placehold.it/200x200"></div>
-						<div class="col-xs-9 col-sm-9 col-md-9"><a href="#">Related Video...</a></div>
+						<div class="col-xs-3 col-sm-3 col-md-3"><img src="https://i.ytimg.com/vi/MX0D4oZwCsA/default.jpg"></div>
+						<div class="related-links col-xs-9 col-sm-9 col-md-9"><a href="#">Related Video...</a></div>
 						<div class="col-xs-9 col-sm-9 col-md-9">727 views</div>
 					</div>
 					<div class="related-videos">
-						<div class="col-xs-3 col-sm-3 col-md-3"><img src="http://placehold.it/200x200"></div>
-						<div class="col-xs-9 col-sm-9 col-md-9"><a href="#">Related Video...</a></div>
+						<div class="col-xs-3 col-sm-3 col-md-3"><img src="https://i.ytimg.com/vi/KGzg1Ho9KeI/default.jpg"></div>
+						<div class="related-links col-xs-9 col-sm-9 col-md-9"><a href="#">Related Video...</a></div>
 						<div class="col-xs-9 col-sm-9 col-md-9">727 views</div>
 					</div>
 				</div>
 			</div>
-
 		</div>
-
-
 	</div>
 
 
