--- a/index II.html
+++ b/index II.html
@@ -45,7 +45,7 @@
 		<div class="row third">
 			<div class="video-title col-xs-12 col-sm-12 col-md-12">Video Title</div>
 			<div class="col-xs-12 col-sm-8 col-md-8">
-				<div class="col-xs-12 col-sm-12 col-md-12"><iframe src="https://www.youtube.com/embed/OQSNhk5ICTI" frameborder="1" allowfullscreen></iframe></div>
+				<div class="col-md-12 col-sm-12 col-xs-12"><iframe src="https://www.youtube.com/embed/OQSNhk5ICTI" frameborder="1" allowfullscreen></iframe></div>
 				<div class="col-xs-12 col-sm-12 col-md-12">
 					<div class="col-xs-3 col-sm-3 col-md-2"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Share</div>
 					<div class="col-xs-3 col-sm-3 col-md-2"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span> Favorite</div>
