--- a/index.html
+++ b/index.html
@@ -139,14 +139,14 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+        <h4 class="modal-title" id="myModalLabel">Rob Before DigitalCrafts</h4>
       </div>
       <div class="modal-body">
         	<img id="rob" src="images/rob-before-dc.png"/>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Subscribe for more images like this!</button>
+        <button type="button" class="btn btn-primary">Subscribe for more images of Rob!</button>
       </div>
     </div>
   </div>
