Minor additions and styling changes

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
 		   </div>
 			<div class="row second header-wrapper">
-				<div class="col-xs-12 col-sm-12 col-md-3 youtube-wrapper">
-					<div class="title"><h2>You<span class"red">Tube</span></h2></div>
-					<div class="broadcast">Broadcast Yourself!</div>
+				<div class="col-xs-12 col-sm-3 col-md-3 youtube-wrapper">
+					<div><img src="images/youtube.png"/></div>
+					<div class="broadcast2">Broadcast Yourself!</div>
 				</div>
-				<div class="search-bar-wrapper col-xs-12 col-sm-12 col-md-5">
+				<div class="search-bar-wrapper col-xs-12 col-sm-5 col-md-5">
 					<div>
 						<input class="col-xs-9 col-sm-9 col-md-9" type="text">
 						<button class="col-xs-3 col-sm-3 col-md-3" value"search">Search</button>
@@ -31,8 +31,8 @@
 						<div class="channels col-xs-4 col-sm-3 col-md-3">Channels</div>
 					</div>
 				</div>
-				<div class="sign-in-wrapper col-xs-12 col-sm-12 col-md-4">
-					<div class="create-signin"><a href="#">Create Account</a> or <a href="#">Sign-in</a></div>
+				<div class="sign-in-wrapper col-xs-12 col-sm-4 col-md-4">
+					<div class="create-signin"><a class ="sig" href="#">Create Account</a> or <a class="sig" href="#">Sign-in</a></div>
 					<div class="subscriptions">
 						<div class="col-xs-4 col-sm-6 col-md-5 col-md-offset-1">Subscription</div>
 						<div class="col-xs-3  col-sm-3 col-md-3">History</div>
@@ -57,24 +57,24 @@
 						<div class="minipic one col-xs-5 col-sm-5 col-md-5" >
 						<img src="http://placehold.it/400x400">
 						</div>
-						<div class="miniDescription one col-xs-7 col-sm-7 col-md-7 main-vid-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  </div>
+						<div class="miniDescription one col-xs-7 col-sm-7 col-md-7 main-vid-text">Lorem ipsum dolor sit amet, consectetur adipiscing.  </div>
 					</div>
 					<div>
 						<div class="minipic two col-xs-5 col-sm-5 col-md-5">
 						<img src="http://placehold.it/400x400">
 						</div>
-						<div class="miniDescription two col-xs-7 col-sm-7 col-md-7 main-vid-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </div>
+						<div class="miniDescription two col-xs-7 col-sm-7 col-md-7 main-vid-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </div>
 					</div>
 					<div>
 						<div class="minipic three col-xs-5 col-sm-5 col-md-5">
 						<img src="http://placehold.it/400x400">
 						</div>
-						<div class="miniDescription three col-xs-7 col-sm-7 col-md-7 main-vid-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  </div>
+						<div class="miniDescription three col-xs-7 col-sm-7 col-md-7 main-vid-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.  </div>
 					</div>
 				</div>
 			</div>
 
-			<div class="col-xs-12 col-sm-4 col-md-4">
+			<div class=" add col-xs-12 col-sm-4 col-md-4">
 				<div class="col-xs-12 col-sm-12 col-md-12">
 				<a data-toggle="modal" data-target="#myModal" src="#">
 					<img id="theimg"src="images/rob-before-dc.png">
@@ -92,35 +92,35 @@
 				<div class="thumb-wrapper col-xs-12 col-sm-12 col-md-12">
 					<div class="col-xs-6 col-sm-3 col-md-3">
 						<div class="footer-pic col-xs-6 col-sm-6 col-md-6"><img src="http://placehold.it/400x400"></div>
-						<div class="footer-disc one col-xs-6 col-sm-6 col-md-6"> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ea commodo consequat.</div>
+						<div class="footer-disc one col-xs-6 col-sm-6 col-md-6"> Ut enim ad minim veniam, quis nostrud exercitation consequat.</div>
 					</div>
 					<div class="col-xs-6 col-sm-3 col-md-3">
 						<div class="footer-pic col-xs-6 col-sm-6 col-md-6"><img src="http://placehold.it/400x400"></div>
-						<div class="footer-disc two col-xs-6 col-sm-6 col-md-6"> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex commodo consequat.</div>
+						<div class="footer-disc two col-xs-6 col-sm-6 col-md-6"> Ut enim ad minim veniam, quis nostrud exercitation consequat.</div>
 					</div>
 					<div class="col-xs-6 col-sm-3 col-md-3">
 						<div class="footer-pic col-xs-6 col-sm-6 col-md-6"><img src="http://placehold.it/400x400"></div>
-						<div class="footer-disc three col-xs-6 col-sm-6 col-md-6"> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex commodo consequat.</div>
+						<div class="footer-disc three col-xs-6 col-sm-6 col-md-6"> Ut enim ad minim veniam, quis nostrud exercitation consequat.</div>
 					</div>
 					<div class="col-xs-6 col-sm-3 col-md-3">
 						<div class="footer-pic col-xs-6 col-sm-6 col-md-6"><img src="http://placehold.it/400x400"></div>
-						<div class="footer-disc four col-xs-6 col-sm-6 col-md-6"> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex commodo consequat.</div>
+						<div class="footer-disc four col-xs-6 col-sm-6 col-md-6"> Ut enim ad minim veniam, quis nostrud exercitation consequat.</div>
 					</div>
 					<div class="col-xs-6 col-sm-3 col-md-3">
 						<div class="footer-pic col-xs-6 col-sm-6 col-md-6"><img src="http://placehold.it/400x400"></div>
-						<div class="footer-disc five col-xs-6 col-sm-6 col-md-6"> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex commodo consequat.</div>
+						<div class="footer-disc five col-xs-6 col-sm-6 col-md-6"> Ut enim ad minim veniam, quis nostrud exercitation consequat.</div>
 					</div>
 					<div class="col-xs-6 col-sm-3 col-md-3">
 						<div class="footer-pic col-xs-6 col-sm-6 col-md-6"><img src="http://placehold.it/400x400"></div>
-						<div class="footer-disc six col-xs-6 col-sm-6 col-md-6"> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ea commodo consequat.</div>
+						<div class="footer-disc six col-xs-6 col-sm-6 col-md-6"> Ut enim ad minim veniam, quis nostrud exercitation consequat.</div>
 					</div>
 					<div class="col-xs-6 col-sm-3 col-md-3">
 						<div class="footer-pic col-xs-6 col-sm-6 col-md-6"><img src="http://placehold.it/400x400"></div>
-						<div class="footer-disc seven col-xs-6 col-sm-6 col-md-6"> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex commodo consequat.</div>
+						<div class="footer-disc seven col-xs-6 col-sm-6 col-md-6"> Ut enim ad minim veniam, quis nostrud exercitation consequat.</div>
 					</div>
 					<div class="col-xs-6 col-sm-3 col-md-3">
 						<div class="footer-pic col-xs-6 col-sm-6 col-md-6"><img src="http://placehold.it/400x400"></div>
-						<div class="footer-disc eight col-xs-6 col-sm-6 col-md-6"> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex commodo consequat.</div>
+						<div class="footer-disc eight col-xs-6 col-sm-6 col-md-6"> Ut enim ad minim veniam, quis nostrud exercitation consequat.</div>
 					</div>	
 				</div>
 			</div>
